# jarvis-core

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  autonomous_ai_system_architecture.md  forge_ai_tool_factory_blueprint.md  vision.md
jarvis/: __init__.py  __main__.py  alerts.py  capability.py  cli.py  config.py  court_api.py  dashboard_html.py  database.py  emperor.py  healing.py  healing_actions.py  main.py  pipeline.py  pipeline_monitor.py  plugin_marketplace.py  prompt_template.py
jarvis/api/: __init__.py  server.py
jarvis/core/: __init__.py  config.py  integration.py  orchestrator.py
jarvis/court/: __init__.py  breeding.py  config.py  court.py  diversity.py  emperor.py  evolution.py  genome_store.py  history.py  inspector.py  merit_board.py  minister.py  orchestrator.py  routing.py  scheduler.py  task_engine.py
jarvis/evolution/: __init__.py  controller.py
jarvis/memory/: __init__.py  engine.py
tests/: __init__.py  test_alerts.py  test_api.py  test_breeding.py  test_builtin_alerts.py  test_capability.py  test_cli.py  test_config.py  test_core.py  test_court.py  test_court_api.py  test_court_orchestration.py  test_crossover.py  test_dashboard.py  test_diversity.py  test_e2e_integration.py  test_emperor_auto_start.py  test_emperor_evolve.py  test_emperor_plugins.py  test_evolution.py  test_genome_store.py  test_healing.py  test_healing_actions.py  test_history.py  test_inspector.py  test_integration.py  test_ministers_api.py  test_pipeline.py  test_pipeline_monitor.py  test_providers.py  test_routing.py  test_stability_tracker.py
(+24 files in other folders)
